--- a/resources/admin/css/sprout-invoice.css
+++ b/resources/admin/css/sprout-invoice.css
@@ -1272,6 +1272,66 @@ div#invoice_status_updates-sticky-wrapper {
 	content: "\f142"
 }
 
+@media (max-width: 450px) {
+
+	.column.column_desc {
+	    display: block;
+	    width: 100%;
+	}
+
+	.item .line_item {
+	    display: block;
+	    /* position: relative; */
+	}
+
+	.item .column input {
+	    display: block;
+	    width: 100%;
+	}
+	#subject_header #subject_header_actions #subject_input_wrap {
+	    width: 100%;
+	    display: block;
+	    float: none;
+	}
+
+	#quick_links .quick_status_update {
+	    float: left;
+	    margin-left: 0px;
+	}
+
+	#quick_links .button {
+	    float: left;
+	    /* margin: 0px; */
+	    /* margin-left: 10px; */
+	}
+
+	div#quick_links {
+	    width: 100%;
+	}
+
+	div#line_items_footer {
+	    width: auto;
+	    padding: 10px;
+	}
+
+	#line_items_footer #invoice_status_updates #publishing-action input#save {
+	    width: 100%;
+	}
+
+	div#invoice_status_updates {
+	    width: 100%;
+	    margin-left: 20px;
+	}
+
+	div#line_items_totals {
+	}
+
+	.sticky-wrapper.stuck #status_updates, .sticky-wrapper.stuck #invoice_status_updates {
+	    background-color: transparent !important;
+	}
+}
+
+
 .dd-placeholder {
 	margin: 5px 0;
 	margin-left: -30px;
@@ -2052,6 +2112,9 @@ input#sa_recurring_invoice_custom_freq {
 	z-index: 100051 !important;
 }
 
+.column.column_desc .redactor_toolbar {
+    overflow: hidden;
+}
 
 /** Addon Settings */
 
