--- a/resources/front-end/css/sprout-invoices.style.css
+++ b/resources/front-end/css/sprout-invoices.style.css
@@ -551,7 +551,7 @@ html[xmlns] .clearfix {
 	padding: 0 10px;
 	transform: rotate(-15deg);
 	-ms-transform: rotate(-15deg);
-	z-indexwebkit-transform: rotate(-15deg);
+	-webkit-transform: rotate(-15deg);
 }
 #status.void {
 	color: #000;
@@ -1020,6 +1020,8 @@ div#vcards {
 	-moz-box-shadow: inset 0 0 5px #ccc;
 	-webkit-box-shadow: inset 0 0 5px #ccc;
 	box-shadow: inset 0 0 5px #ccc;
+	position: relative;
+	z-index: 10;
 }
 
 #billing_cc_fields {
