--- a/resources/admin/css/sprout-invoice.css
+++ b/resources/admin/css/sprout-invoice.css
@@ -268,6 +268,9 @@ form.si_settings_form table .wp-editor-wrap {
 	width: 20px;
 	-webkit-font-smoothing: antialiased!important;
 }
+.del_button:hover:before {
+	color: red;
+}
 
 /**
  * General
@@ -413,6 +416,18 @@ table.sa_table {
  * Welcome
  */
 
+
+#si_dashboard .three-col > div {
+    position: relative;
+    width: 29.95%;
+    margin-right: 4.999999999%;
+    float: left;
+}
+
+#si_dashboard h2 .nav-tab {
+	font-size: 16px;
+}
+
 #si_dashboard h1 a {
 	color: inherit;
 	text-decoration: none;
@@ -553,6 +568,10 @@ form table .sa_addon {
     margin-right: 0px;
 }
 
+.wrap h2.nav-tab-wrapper {
+	padding: 0px;
+	padding-left: 10px;
+}
 /**
  * Docs
  */
@@ -1970,10 +1989,10 @@ input[type="date"]:focus:before, input[type="date"]:valid:before {
 	box-shadow: 0 1px 1px 0 rgba(0,0,0,.1);
 }
 .upgrade_message .icon-sproutapps-flat {
-	font-size: 3em;
+	font-size: 2em;
 	line-height: 1px;
 	float: left;
-	margin-top: -.3em;
+	margin-top: -.1em;
 }
 
 
