--- a/resources/admin/css/sprout-invoice.css
+++ b/resources/admin/css/sprout-invoice.css
@@ -2360,7 +2360,8 @@ input#sa_recurring_invoice_custom_freq {
 
 #dashboard-widgets #time_tracking h3.dashboard_widget_title,
 #dashboard-widgets #unbilled_time_tracking h3.dashboard_widget_title {
-    padding-left: 10px;
+    padding: 10px;
+    margin-bottom: 0px;
     background-color: #f9f9f9;
     float: right;
 }
