--- a/resources/admin/css/sprout-invoice.css
+++ b/resources/admin/css/sprout-invoice.css
@@ -2379,6 +2379,9 @@ input#sa_recurring_invoice_custom_freq {
     text-transform: uppercase;
 	position: absolute;
 }
+#marketplace_view .biz span.bundled_addon {
+    background-color: #6CAAE4;
+}
 
 /**
  * Dashboard widgets
