--- a/resources/admin/css/sprout-invoice.css
+++ b/resources/admin/css/sprout-invoice.css
@@ -182,6 +182,7 @@ a.sa_icon_link {
  * Misc
  */
 
+.post-type-sa_estimate .clearfix,
 .post-type-sa_invoice .clearfix,
 .toplevel_page_sprout-apps .clearfix,
 .sprout-apps_page_sprout-apps-settings .clearfix {
