--- a/resources/admin/css/settings.css
+++ b/resources/admin/css/settings.css
@@ -10,7 +10,10 @@
       to { opacity: 1; }
 }
 
-.update-nag, .notice {
+body[class*='sprout-invoices'] div.update-nag, 
+body[class*='sprout-invoices'] div.notice,
+body[class*='sprout-invoices'] div.error,
+body[class*='sprout-invoices'] div.updated {
     display: none;
 }
 /**
